--- a/index-all.html
+++ b/index-all.html
@@ -12359,6 +12359,10 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/cost/DifferentiableInverseProblemCost.html#mu">mu</a></span> - Variable in class mitiv.cost.<a href="./mitiv/cost/DifferentiableInverseProblemCost.html" title="class in mitiv.cost">DifferentiableInverseProblemCost</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">multiply(Vector, Vector, Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
+<dd>
+<div class="block">Perform a component-wise multiplication of two vectors.</div>
+</dd>
 </dl>
 <a name="_N_">
 <!--   -->
@@ -22916,6 +22920,12 @@ the order they are declared.</div>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#_fill(mitiv.linalg.Vector, double)">_fill(Vector, double)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">_multiply(Vector, Vector, Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html#_multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">_multiply(Vector, Vector, Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#_multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">_multiply(Vector, Vector, Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
+<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_norm1(mitiv.linalg.Vector)">_norm1(Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html#_norm1(mitiv.linalg.Vector)">_norm1(Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></dt>
@@ -22963,11 +22973,7 @@ the order they are declared.</div>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">_swap(Vector, Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_swap(mitiv.linalg.shaped.DoubleShapedVector, mitiv.linalg.shaped.DoubleShapedVector)">_swap(DoubleShapedVector, DoubleShapedVector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/DoubleShapedVectorSpace.html" title="class in mitiv.linalg.shaped">DoubleShapedVectorSpace</a></dt>
-<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html#_swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">_swap(Vector, Vector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></dt>
-<dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html#_swap(mitiv.linalg.shaped.FloatShapedVector, mitiv.linalg.shaped.FloatShapedVector)">_swap(FloatShapedVector, FloatShapedVector)</a></span> - Method in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/VectorSpace.html#_swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">_swap(Vector, Vector)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></dt>
 <dd>&nbsp;</dd>
