--- a/mitiv/linalg/shaped/DoubleShapedVectorSpace.html
+++ b/mitiv/linalg/shaped/DoubleShapedVectorSpace.html
@@ -271,26 +271,27 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
      double&nbsp;alpha)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><code>protected void</code></td>
+<td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">_multiply</a></strong>(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vx,
+         <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vy,
+         <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;dst)</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><code>protected double</code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_norm1(mitiv.linalg.Vector)">_norm1</a></strong>(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>protected double</code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_norm2(mitiv.linalg.Vector)">_norm2</a></strong>(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>protected double</code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_normInf(mitiv.linalg.Vector)">_normInf</a></strong>(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
-<td class="colFirst"><code>protected void</code></td>
-<td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_swap(mitiv.linalg.shaped.DoubleShapedVector, mitiv.linalg.shaped.DoubleShapedVector)">_swap</a></strong>(<a href="../../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;vx,
-     <a href="../../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;vy)</code>&nbsp;</td>
-</tr>
 <tr class="altColor">
 <td class="colFirst"><code>protected void</code></td>
-<td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">_swap</a></strong>(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x,
-     <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;y)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../../mitiv/linalg/shaped/DoubleShapedVectorSpace.html#_swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">_swap</a></strong>(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vx,
+     <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vy)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code><a href="../../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a></code></td>
@@ -362,7 +363,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.linalg.<a href="../../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></h3>
-<code><a href="../../../mitiv/linalg/VectorSpace.html#_scale(mitiv.linalg.Vector, double)">_scale</a>, <a href="../../../mitiv/linalg/VectorSpace.html#_zero(mitiv.linalg.Vector)">_zero</a>, <a href="../../../mitiv/linalg/VectorSpace.html#check(mitiv.linalg.Vector)">check</a>, <a href="../../../mitiv/linalg/VectorSpace.html#combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector)">combine</a>, <a href="../../../mitiv/linalg/VectorSpace.html#combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, mitiv.linalg.Vector)">combine</a>, <a href="../../../mitiv/linalg/VectorSpace.html#combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, mitiv.linalg.Vector)">combine</a>, <a href="../../../mitiv/linalg/VectorSpace.html#copy(mitiv.linalg.Vector, mitiv.linalg.Vector)">copy</a>, <a href="../../../mitiv/linalg/VectorSpace.html#dot(mitiv.linalg.Vector, mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/VectorSpace.html#dot(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/VectorSpace.html#fill(mitiv.linalg.Vector, double)">fill</a>, <a href="../../../mitiv/linalg/VectorSpace.html#getNumber()">getNumber</a>, <a href="../../../mitiv/linalg/VectorSpace.html#norm1(mitiv.linalg.Vector)">norm1</a>, <a href="../../../mitiv/linalg/VectorSpace.html#norm2(mitiv.linalg.Vector)">norm2</a>, <a href="../../../mitiv/linalg/VectorSpace.html#normInf(mitiv.linalg.Vector)">normInf</a>, <a href="../../../mitiv/linalg/VectorSpace.html#one()">one</a>, <a href="../../../mitiv/linalg/VectorSpace.html#owns(mitiv.linalg.Vector)">owns</a>, <a href="../../../mitiv/linalg/VectorSpace.html#scale(mitiv.linalg.Vector, double)">scale</a>, <a href="../../../mitiv/linalg/VectorSpace.html#swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">swap</a>, <a href="../../../mitiv/linalg/VectorSpace.html#zero()">zero</a>, <a href="../../../mitiv/linalg/VectorSpace.html#zero(mitiv.linalg.Vector)">zero</a></code></li>
+<code><a href="../../../mitiv/linalg/VectorSpace.html#_scale(mitiv.linalg.Vector, double)">_scale</a>, <a href="../../../mitiv/linalg/VectorSpace.html#_zero(mitiv.linalg.Vector)">_zero</a>, <a href="../../../mitiv/linalg/VectorSpace.html#check(mitiv.linalg.Vector)">check</a>, <a href="../../../mitiv/linalg/VectorSpace.html#combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector)">combine</a>, <a href="../../../mitiv/linalg/VectorSpace.html#combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, mitiv.linalg.Vector)">combine</a>, <a href="../../../mitiv/linalg/VectorSpace.html#combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, mitiv.linalg.Vector)">combine</a>, <a href="../../../mitiv/linalg/VectorSpace.html#copy(mitiv.linalg.Vector, mitiv.linalg.Vector)">copy</a>, <a href="../../../mitiv/linalg/VectorSpace.html#dot(mitiv.linalg.Vector, mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/VectorSpace.html#dot(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">dot</a>, <a href="../../../mitiv/linalg/VectorSpace.html#fill(mitiv.linalg.Vector, double)">fill</a>, <a href="../../../mitiv/linalg/VectorSpace.html#getNumber()">getNumber</a>, <a href="../../../mitiv/linalg/VectorSpace.html#multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">multiply</a>, <a href="../../../mitiv/linalg/VectorSpace.html#norm1(mitiv.linalg.Vector)">norm1</a>, <a href="../../../mitiv/linalg/VectorSpace.html#norm2(mitiv.linalg.Vector)">norm2</a>, <a href="../../../mitiv/linalg/VectorSpace.html#normInf(mitiv.linalg.Vector)">normInf</a>, <a href="../../../mitiv/linalg/VectorSpace.html#one()">one</a>, <a href="../../../mitiv/linalg/VectorSpace.html#owns(mitiv.linalg.Vector)">owns</a>, <a href="../../../mitiv/linalg/VectorSpace.html#scale(mitiv.linalg.Vector, double)">scale</a>, <a href="../../../mitiv/linalg/VectorSpace.html#swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">swap</a>, <a href="../../../mitiv/linalg/VectorSpace.html#zero()">zero</a>, <a href="../../../mitiv/linalg/VectorSpace.html#zero(mitiv.linalg.Vector)">zero</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
@@ -558,7 +559,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
  known data type.
  </p></div>
 <dl><dt><span class="strong">Parameters:</span></dt><dd><code>arr</code> - - A shaped array with elements of type <code>double</code>.</dd>
-<dt><span class="strong">Returns:</span></dt><dd>A new FloatShapedVector.</dd></dl>
+<dt><span class="strong">Returns:</span></dt><dd>A new DoubleShapedVector.</dd></dl>
 </li>
 </ul>
 <a name="create(mitiv.array.DoubleArray, boolean)">
@@ -576,7 +577,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
  known data type.
  </p></div>
 <dl><dt><span class="strong">Parameters:</span></dt><dd><code>arr</code> - - A shaped array with elements of type <code>double</code>.</dd><dd><code>forceCopy</code> - - A flag to force a copy of the contents if true.</dd>
-<dt><span class="strong">Returns:</span></dt><dd>A new FloatShapedVector.</dd></dl>
+<dt><span class="strong">Returns:</span></dt><dd>A new DoubleShapedVector.</dd></dl>
 </li>
 </ul>
 <a name="clone(mitiv.linalg.shaped.DoubleShapedVector)">
@@ -692,22 +693,12 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
 <ul class="blockList">
 <li class="blockList">
 <h4>_swap</h4>
-<pre>protected&nbsp;void&nbsp;_swap(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x,
-         <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;y)</pre>
+<pre>protected&nbsp;void&nbsp;_swap(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vx,
+         <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vy)</pre>
 <dl>
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../../mitiv/linalg/VectorSpace.html#_swap(mitiv.linalg.Vector, mitiv.linalg.Vector)">_swap</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></code></dd>
 </dl>
-</li>
-</ul>
-<a name="_swap(mitiv.linalg.shaped.DoubleShapedVector, mitiv.linalg.shaped.DoubleShapedVector)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>_swap</h4>
-<pre>protected&nbsp;void&nbsp;_swap(<a href="../../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;vx,
-         <a href="../../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;vy)</pre>
 </li>
 </ul>
 <a name="_fill(mitiv.linalg.Vector, double)">
@@ -856,7 +847,7 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
 <a name="_combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, mitiv.linalg.Vector)">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>_combine</h4>
 <pre>protected&nbsp;void&nbsp;_combine(double&nbsp;alpha,
@@ -876,6 +867,21 @@ extends <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="cla
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../../mitiv/linalg/VectorSpace.html#_combine(double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, double, mitiv.linalg.Vector, mitiv.linalg.Vector)">_combine</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></code></dd>
 <dt><span class="strong">Parameters:</span></dt><dd><code>alpha</code> - - The scalar factor for vector <code>x</code>.</dd><dd><code>x</code> - - A vector.</dd><dd><code>beta</code> - - The scalar factor for vector <code>y</code>.</dd><dd><code>y</code> - - Another vector.</dd><dd><code>gamma</code> - - The scalar factor for vector <code>z</code>.</dd><dd><code>z</code> - - Yet another vector.</dd><dd><code>dst</code> - - The destination vector.</dd></dl>
+</li>
+</ul>
+<a name="_multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>_multiply</h4>
+<pre>protected&nbsp;void&nbsp;_multiply(<a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vx,
+             <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;vy,
+             <a href="../../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;dst)</pre>
+<dl>
+<dt><strong>Specified by:</strong></dt>
+<dd><code><a href="../../../mitiv/linalg/VectorSpace.html#_multiply(mitiv.linalg.Vector, mitiv.linalg.Vector, mitiv.linalg.Vector)">_multiply</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></code></dd>
+</dl>
 </li>
 </ul>
 </li>
